--- a/index.html
+++ b/index.html
@@ -1,6 +1,99 @@
-git init
-git add index.html
-git commit -m "Ajout page d'accueil"
-git branch -M main
-git remote add origin https://github.com/allanbavajee/coeur-ouvert.git
-git push -u origin main
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Coeur Ouvert</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 30px;
+            background: #f0f8ff;
+            color: #333;
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        header {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+        h1 {
+            color: #2a6ebb;
+            font-size: 2.8em;
+            margin-bottom: 0;
+        }
+        p.slogan {
+            font-style: italic;
+            color: #4a90e2;
+            font-size: 1.2em;
+        }
+        #verseOfDay {
+            background: #d0e6ff;
+            border-left: 6px solid #2a6ebb;
+            padding: 15px 20px;
+            margin-bottom: 30px;
+            font-size: 1.2em;
+            line-height: 1.4em;
+            border-radius: 4px;
+        }
+        #encouragement {
+            background: #e8f1fb;
+            border-left: 6px solid #4a90e2;
+            padding: 20px;
+            font-size: 1.1em;
+            line-height: 1.5em;
+            border-radius: 4px;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Coeur Ouvert</h1>
+    <p class="slogan">Espoir, écoute et lumière pour avancer chaque jour.</p>
+</header>
+
+<section id="verseOfDay">
+    <!-- Verset du jour apparaîtra ici -->
+</section>
+
+<section id="encouragement">
+    <!-- Message d'encouragement apparaîtra ici -->
+</section>
+
+<script>
+    // Liste simple de versets bibliques
+    const verses = [
+        { text: "L'Éternel est mon berger: je ne manquerai de rien.", reference: "Psaume 23:1" },
+        { text: "Je puis tout par celui qui me fortifie.", reference: "Philippiens 4:13" },
+        { text: "Car je connais les projets que j'ai formés sur vous, dit l'Éternel.", reference: "Jérémie 29:11" },
+        { text: "Ne crains point, car je suis avec toi; ne promène pas des regards inquiets, car je suis ton Dieu.", reference: "Ésaïe 41:10" },
+        { text: "Approchez-vous de Dieu, et il s'approchera de vous.", reference: "Jacques 4:8" }
+    ];
+
+    // Liste simple de messages d'encouragement
+    const encouragements = [
+        "Parfois, la vie nous met face à des tempêtes, mais même au cœur de la douleur, une lumière ne s’éteint jamais.",
+        "N'oublie jamais que chaque jour est une nouvelle chance d’avancer avec espoir et confiance.",
+        "Tu n'es jamais seul, car une présence bienveillante est toujours à tes côtés pour te soutenir.",
+        "Laisse ton cœur s’ouvrir à la paix intérieure, même lorsque le monde semble troublé.",
+        "Fais un pas à la fois, et découvre la force qui sommeille en toi."
+    ];
+
+    // Fonction pour afficher un élément aléatoire d’un tableau
+    function getRandomItem(arr) {
+        return arr[Math.floor(Math.random() * arr.length)];
+    }
+
+    // Affichage verset du jour
+    const verse = getRandomItem(verses);
+    document.getElementById('verseOfDay').innerHTML = `"${verse.text}"<br><strong>— ${verse.reference}</strong>`;
+
+    // Affichage message d'encouragement
+    const message = getRandomItem(encouragements);
+    document.getElementById('encouragement').innerText = message;
+</script>
+
+</body>
+</html>
