--- a/index.html
+++ b/index.html
@@ -1,99 +1,144 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Coeur Ouvert</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 30px;
-            background: #f0f8ff;
-            color: #333;
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        header {
-            text-align: center;
-            margin-bottom: 40px;
-        }
-        h1 {
-            color: #2a6ebb;
-            font-size: 2.8em;
-            margin-bottom: 0;
-        }
-        p.slogan {
-            font-style: italic;
-            color: #4a90e2;
-            font-size: 1.2em;
-        }
-        #verseOfDay {
-            background: #d0e6ff;
-            border-left: 6px solid #2a6ebb;
-            padding: 15px 20px;
-            margin-bottom: 30px;
-            font-size: 1.2em;
-            line-height: 1.4em;
-            border-radius: 4px;
-        }
-        #encouragement {
-            background: #e8f1fb;
-            border-left: 6px solid #4a90e2;
-            padding: 20px;
-            font-size: 1.1em;
-            line-height: 1.5em;
-            border-radius: 4px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Coeur Ouvert</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Nunito&display=swap" rel="stylesheet" />
+
+  <style>
+    /* Palette de couleurs */
+    :root {
+      --blue-main: #2a6ebb;
+      --blue-pastel: #d0e6ff;
+      --gray-medium: #6b7c8a;
+      --gray-light: #f0f4f8;
+      --accent-pastel: #a3c1d1;
+    }
+
+    /* Reset et base */
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Nunito', sans-serif;
+      background-color: var(--gray-light);
+      color: var(--gray-medium);
+      margin: 0;
+      padding: 30px 20px;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    a {
+      color: var(--blue-main);
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+
+    header {
+      text-align: center;
+      margin-bottom: 50px;
+    }
+    header h1 {
+      font-family: 'Montserrat', sans-serif;
+      color: var(--blue-main);
+      font-size: 3em;
+      margin: 0 0 10px;
+      letter-spacing: 2px;
+    }
+    header p.slogan {
+      font-style: italic;
+      font-size: 1.3em;
+      color: var(--accent-pastel);
+      margin: 0;
+    }
+
+    #verseOfDay {
+      background-color: var(--blue-pastel);
+      border-left: 8px solid var(--blue-main);
+      border-radius: 6px;
+      padding: 25px 30px;
+      font-size: 1.4em;
+      line-height: 1.5em;
+      margin-bottom: 40px;
+      color: var(--blue-main);
+      box-shadow: 0 4px 8px rgba(42,110,187,0.15);
+    }
+
+    #encouragement {
+      background-color: white;
+      border-left: 8px solid var(--accent-pastel);
+      border-radius: 6px;
+      padding: 25px 30px;
+      font-size: 1.2em;
+      line-height: 1.6em;
+      color: var(--gray-medium);
+      box-shadow: 0 4px 8px rgba(163,193,209,0.25);
+    }
+
+    /* Responsive */
+    @media (max-width: 480px) {
+      body {
+        padding: 20px 15px;
+        max-width: 100%;
+      }
+      header h1 {
+        font-size: 2.2em;
+      }
+      #verseOfDay, #encouragement {
+        font-size: 1.1em;
+        padding: 20px;
+      }
+    }
+  </style>
 </head>
 <body>
 
-<header>
+  <header>
     <h1>Coeur Ouvert</h1>
     <p class="slogan">Espoir, écoute et lumière pour avancer chaque jour.</p>
-</header>
+  </header>
 
-<section id="verseOfDay">
+  <section id="verseOfDay">
     <!-- Verset du jour apparaîtra ici -->
-</section>
+  </section>
 
-<section id="encouragement">
+  <section id="encouragement">
     <!-- Message d'encouragement apparaîtra ici -->
-</section>
+  </section>
 
-<script>
-    // Liste simple de versets bibliques
+  <script>
     const verses = [
-        { text: "L'Éternel est mon berger: je ne manquerai de rien.", reference: "Psaume 23:1" },
-        { text: "Je puis tout par celui qui me fortifie.", reference: "Philippiens 4:13" },
-        { text: "Car je connais les projets que j'ai formés sur vous, dit l'Éternel.", reference: "Jérémie 29:11" },
-        { text: "Ne crains point, car je suis avec toi; ne promène pas des regards inquiets, car je suis ton Dieu.", reference: "Ésaïe 41:10" },
-        { text: "Approchez-vous de Dieu, et il s'approchera de vous.", reference: "Jacques 4:8" }
+      { text: "L'Éternel est mon berger: je ne manquerai de rien.", reference: "Psaume 23:1" },
+      { text: "Je puis tout par celui qui me fortifie.", reference: "Philippiens 4:13" },
+      { text: "Car je connais les projets que j'ai formés sur vous, dit l'Éternel.", reference: "Jérémie 29:11" },
+      { text: "Ne crains point, car je suis avec toi; ne promène pas des regards inquiets, car je suis ton Dieu.", reference: "Ésaïe 41:10" },
+      { text: "Approchez-vous de Dieu, et il s'approchera de vous.", reference: "Jacques 4:8" }
     ];
 
-    // Liste simple de messages d'encouragement
     const encouragements = [
-        "Parfois, la vie nous met face à des tempêtes, mais même au cœur de la douleur, une lumière ne s’éteint jamais.",
-        "N'oublie jamais que chaque jour est une nouvelle chance d’avancer avec espoir et confiance.",
-        "Tu n'es jamais seul, car une présence bienveillante est toujours à tes côtés pour te soutenir.",
-        "Laisse ton cœur s’ouvrir à la paix intérieure, même lorsque le monde semble troublé.",
-        "Fais un pas à la fois, et découvre la force qui sommeille en toi."
+      "Parfois, la vie nous met face à des tempêtes, mais même au cœur de la douleur, une lumière ne s’éteint jamais.",
+      "N'oublie jamais que chaque jour est une nouvelle chance d’avancer avec espoir et confiance.",
+      "Tu n'es jamais seul, car une présence bienveillante est toujours à tes côtés pour te soutenir.",
+      "Laisse ton cœur s’ouvrir à la paix intérieure, même lorsque le monde semble troublé.",
+      "Fais un pas à la fois, et découvre la force qui sommeille en toi."
     ];
 
-    // Fonction pour afficher un élément aléatoire d’un tableau
     function getRandomItem(arr) {
-        return arr[Math.floor(Math.random() * arr.length)];
+      return arr[Math.floor(Math.random() * arr.length)];
     }
 
-    // Affichage verset du jour
     const verse = getRandomItem(verses);
     document.getElementById('verseOfDay').innerHTML = `"${verse.text}"<br><strong>— ${verse.reference}</strong>`;
 
-    // Affichage message d'encouragement
     const message = getRandomItem(encouragements);
     document.getElementById('encouragement').innerText = message;
-</script>
+  </script>
 
 </body>
 </html>
