--- a/index.html
+++ b/index.html
@@ -9,39 +9,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Nunito&display=swap" rel="stylesheet" />
 
   <style>
-    nav {
-  background-color: var(--blue-main);
-  padding: 12px 20px;
-  border-radius: 6px;
-  margin-bottom: 30px;
-  box-shadow: 0 3px 6px rgba(42,110,187,0.3);
-}
-
-.menu {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-}
-
-.menu li a {
-  color: white;
-  font-weight: 700;
-  text-decoration: none;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1.1em;
-  transition: color 0.3s ease;
-}
-
-.menu li a:hover,
-.menu li a:focus {
-  color: var(--accent-pastel);
-  outline: none;
-}
-
-    /* Palette de couleurs */
     :root {
       --blue-main: #2a6ebb;
       --blue-pastel: #d0e6ff;
@@ -50,7 +17,6 @@
       --accent-pastel: #a3c1d1;
     }
 
-    /* Reset et base */
     * {
       box-sizing: border-box;
     }
@@ -70,6 +36,39 @@
     }
     a:hover {
       text-decoration: underline;
+    }
+
+    /* Menu */
+    nav {
+      background-color: var(--blue-main);
+      padding: 12px 20px;
+      border-radius: 6px;
+      margin-bottom: 30px;
+      box-shadow: 0 3px 6px rgba(42,110,187,0.3);
+    }
+
+    .menu {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+    }
+
+    .menu li a {
+      color: white;
+      font-weight: 700;
+      text-decoration: none;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1.1em;
+      transition: color 0.3s ease;
+    }
+
+    .menu li a:hover,
+    .menu li a:focus {
+      color: var(--accent-pastel);
+      outline: none;
     }
 
     header {
@@ -130,6 +129,13 @@
   </style>
 </head>
 <body>
+
+  <nav>
+    <ul class="menu">
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="coaching.html">Coaching Spirituel</a></li>
+    </ul>
+  </nav>
 
   <header>
     <h1>Coeur Ouvert</h1>
