--- a/ressources.html
+++ b/ressources.html
@@ -147,7 +147,7 @@
   <section class="resources-list">
     <ul>
       <li>
-        <a href="pdf/encouragement-1.pdf" target="_blank" download>Encouragement 1 (PDF)</a>
+       <a href="pdf/PRESERVE_TON_AME_DE_CET_AVORTEUR_DE_DESTINEE.pdf" target="_blank" download>Préserve ton âme</a>
       </li>
       <li>
         <a href="pdf/enseignement-foi.pdf" target="_blank" download>Enseignement sur la foi (PDF)</a>
