--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
     <ul class="menu">
       <li><a href="index.html">Accueil</a></li>
       <li><a href="coaching.html">Coaching Spirituel</a></li>
+      <li><a href="ressources.html">Ressources</a></li>
     </ul>
   </nav>
 
