--- a/coaching.html
+++ b/coaching.html
@@ -161,6 +161,7 @@
     <textarea id="message" name="message" rows="5" placeholder="Ta demande ou question" required></textarea>
 
     <button type="submit">Envoyer</button>
+    <form action="https://formspree.io/f/mpwlkere?redirect=https://allanbavajee.github.io/coeur-ouvert/merci.html" method="POST">
   </form>
 
   <div id="formMessage" style="margin-top:20px; color: green; font-weight: 600;"></div>
