--- a/index.html
+++ b/index.html
@@ -2,144 +2,62 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Coeur Ouvert</title>
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Nunito&display=swap" rel="stylesheet" />
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Plateforme d'encouragement biblique</title>
   <style>
-    :root {
-      --blue-main: #2a6ebb;
-      --blue-pastel: #d0e6ff;
-      --gray-medium: #6b7c8a;
-      --gray-light: #f0f4f8;
-      --accent-pastel: #a3c1d1;
-    }
-
     body {
-      font-family: 'Nunito', sans-serif;
-      background-color: var(--gray-light);
-      color: var(--gray-medium);
-      margin: 0;
-      padding: 30px 20px;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    /* Menu */
-    nav {
-      background-color: var(--blue-main);
-      padding: 12px 20px;
-      border-radius: 6px;
-      margin-bottom: 30px;
-      box-shadow: 0 3px 6px rgba(42,110,187,0.3);
-    }
-
-    .menu {
-      list-style: none;
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
       margin: 0;
       padding: 0;
-      display: flex;
-      justify-content: center;
-      gap: 40px;
-    }
-
-    .menu li a {
-      color: white;
-      font-weight: 700;
-      text-decoration: none;
-      font-family: 'Montserrat', sans-serif;
-      font-size: 1.1em;
-      transition: color 0.3s ease;
-    }
-
-    .menu li a:hover,
-    .menu li a:focus {
-      color: var(--accent-pastel);
-      outline: none;
-    }
-
-    header {
       text-align: center;
-      margin-bottom: 40px;
     }
-    header h1 {
-      font-family: 'Montserrat', sans-serif;
-      color: var(--blue-main);
-      font-size: 3em;
-      margin: 0 0 10px;
-      letter-spacing: 2px;
+    header {
+      background-color: #4CAF50;
+      color: white;
+      padding: 1em;
     }
-    header p.slogan {
-      font-style: italic;
+    main {
+      padding: 20px;
+    }
+    .verse {
+      background: white;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      max-width: 500px;
+      margin: auto;
       font-size: 1.2em;
-      color: var(--accent-pastel);
-      margin: 0 0 20px;
+      line-height: 1.5;
     }
-
-    #daily-verse {
-      font-style: italic;
-      color: var(--blue-main);
-      font-weight: 600;
-      margin-top: 20px;
-    }
-
-    /* Responsive */
-    @media (max-width: 480px) {
-      body {
-        padding: 20px 15px;
-        max-width: 100%;
-      }
-      header h1 {
-        font-size: 2.2em;
-      }
+    footer {
+      background: #333;
+      color: white;
+      padding: 10px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
     }
   </style>
 </head>
 <body>
-
-  <nav>
-    <ul class="menu">
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="coaching.html">Coaching Spirituel</a></li>
-      <li><a href="ressources.html">Ressources</a></li>
-    </ul>
-  </nav>
-
   <header>
-    <h1>Coeur Ouvert</h1>
-    <p class="slogan">Espoir, écoute et lumière pour avancer chaque jour.</p>
-    <div id="daily-verse"></div>
+    <h1>Plateforme d'encouragement biblique</h1>
   </header>
+  <main>
+    <h2>Verset du jour</h2>
+    <div id="verse-of-the-day" class="verse"></div>
+  </main>
+  <footer>
+    <p>&copy; 2025 - Plateforme d'encouragement biblique</p>
+  </footer>
 
   <script>
-    const versesRefs = [
-      "Psaumes 23:1",
-      "Jean 3:16",
-      "Philippiens 4:13",
-      "Ésaïe 41:10",
-      "Matthieu 11:28",
-      "Romains 8:28",
-      "Proverbes 3:5",
-      "Josué 1:9"
-    ];
-
-    const dayIndex = new Date().getDate() % versesRefs.length;
-    const verseRef = versesRefs[dayIndex];
-
-    fetch(`https://cors-anywhere.herokuapp.com/https://bible-api.com/${encodeURIComponent(verseRef)}?translation=segond`)
-      .then(response => response.json())
-      .then(data => {
-        const verseText = data.text.trim();
-        document.getElementById("daily-verse").textContent = `"${verseText}" — ${verseRef}`;
-      })
-      .catch(error => {
-        document.getElementById("daily-verse").textContent = "Impossible de charger le verset du jour.";
-        console.error(error);
-      });
+    document.addEventListener("DOMContentLoaded", function () {
+      const verseContainer = document.getElementById("verse-of-the-day");
+      verseContainer.textContent =
+        "Philippiens 4:13 - Je puis tout par celui qui me fortifie.";
+    });
   </script>
-
 </body>
 </html>
