--- a/index.html
+++ b/index.html
@@ -1,63 +1,97 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Plateforme d'encouragement biblique</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-    header {
-      background-color: #4CAF50;
-      color: white;
-      padding: 1em;
-    }
-    main {
-      padding: 20px;
-    }
-    .verse {
-      background: white;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      max-width: 500px;
-      margin: auto;
-      font-size: 1.2em;
-      line-height: 1.5;
-    }
-    footer {
-      background: #333;
-      color: white;
-      padding: 10px;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Plateforme d'encouragement biblique</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #2c3e50;
+            color: white;
+            padding: 15px;
+            text-align: center;
+        }
+        nav {
+            background-color: #34495e;
+            display: flex;
+            justify-content: center;
+            padding: 10px;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        section {
+            padding: 20px;
+            max-width: 800px;
+            margin: auto;
+            background: white;
+            margin-top: 20px;
+            border-radius: 8px;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+        input, textarea, button {
+            margin: 8px 0;
+            padding: 10px;
+            font-size: 16px;
+        }
+        button {
+            background-color: #27ae60;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #219150;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Plateforme d'encouragement biblique</h1>
-  </header>
-  <main>
-    <h2>Verset du jour</h2>
-    <div id="verse-of-the-day" class="verse"></div>
-  </main>
-  <footer>
-    <p>&copy; 2025 - Plateforme d'encouragement biblique</p>
-  </footer>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const verseContainer = document.getElementById("verse-of-the-day");
-      verseContainer.textContent =
-        "Philippiens 4:13 - Je puis tout par celui qui me fortifie.";
-    });
-  </script>
+    <header>
+        <h1>Plateforme d'encouragement biblique</h1>
+    </header>
+
+    <nav>
+        <a href="#verset">Verset du jour</a>
+        <a href="#contact">Contact</a>
+    </nav>
+
+    <section id="verset">
+        <h2>Verset du jour</h2>
+        <p id="verse-container">Chargement du verset...</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contactez-nous</h2>
+        <form>
+            <input type="text" placeholder="Votre nom" required>
+            <input type="email" placeholder="Votre email" required>
+            <textarea placeholder="Votre message" rows="5" required></textarea>
+            <button type="submit">Envoyer</button>
+        </form>
+    </section>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const verseContainer = document.getElementById("verse-container");
+            const verse = "Philippiens 4:13 - Je puis tout par celui qui me fortifie.";
+            verseContainer.textContent = verse;
+        });
+    </script>
+
 </body>
 </html>
