--- a/index.html
+++ b/index.html
@@ -9,19 +9,14 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
         }
         header {
-            background-color: #2c3e50;
+            background: #2c3e50;
             color: white;
-            padding: 15px;
-            text-align: center;
+            padding: 15px 0;
         }
         nav {
-            background-color: #34495e;
-            display: flex;
-            justify-content: center;
-            padding: 10px;
+            text-align: center;
         }
         nav a {
             color: white;
@@ -35,63 +30,68 @@
             padding: 20px;
             max-width: 800px;
             margin: auto;
-            background: white;
-            margin-top: 20px;
-            border-radius: 8px;
+        }
+        h1, h2 {
+            text-align: center;
         }
         form {
             display: flex;
             flex-direction: column;
+            gap: 10px;
         }
-        input, textarea, button {
-            margin: 8px 0;
+        input, textarea {
             padding: 10px;
-            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
         }
         button {
-            background-color: #27ae60;
+            padding: 10px;
+            background: #27ae60;
             color: white;
             border: none;
+            border-radius: 5px;
             cursor: pointer;
         }
         button:hover {
-            background-color: #219150;
+            background: #2ecc71;
         }
     </style>
 </head>
 <body>
 
+    <!-- Header et Menu -->
     <header>
-        <h1>Plateforme d'encouragement biblique</h1>
+        <nav>
+            <a href="#accueil">Accueil</a>
+            <a href="#verset">Verset du jour</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
 
-    <nav>
-        <a href="#verset">Verset du jour</a>
-        <a href="#contact">Contact</a>
-    </nav>
-
-    <section id="verset">
-        <h2>Verset du jour</h2>
-        <p id="verse-container">Chargement du verset...</p>
+    <!-- Accueil -->
+    <section id="accueil">
+        <h1>Plateforme d'encouragement biblique</h1>
+        <p style="text-align:center;">
+            Bienvenue sur notre plateforme. Recevez un encouragement quotidien et contactez-nous pour toute demande de prière ou de soutien.
+        </p>
     </section>
 
+    <!-- Verset du jour -->
+    <section id="verset">
+        <h2>Verset du jour</h2>
+        <p style="text-align:center;"><strong>Philippiens 4:13</strong> - Je puis tout par celui qui me fortifie.</p>
+    </section>
+
+    <!-- Formulaire de contact -->
     <section id="contact">
         <h2>Contactez-nous</h2>
-        <form>
-            <input type="text" placeholder="Votre nom" required>
-            <input type="email" placeholder="Votre email" required>
-            <textarea placeholder="Votre message" rows="5" required></textarea>
+        <form action="https://formspree.io/f/mpwlkere?redirect=merci.html" method="POST">
+            <input type="text" name="nom" placeholder="Votre nom" required>
+            <input type="email" name="email" placeholder="Votre email" required>
+            <textarea name="message" placeholder="Votre message" rows="5" required></textarea>
             <button type="submit">Envoyer</button>
         </form>
     </section>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const verseContainer = document.getElementById("verse-container");
-            const verse = "Philippiens 4:13 - Je puis tout par celui qui me fortifie.";
-            verseContainer.textContent = verse;
-        });
-    </script>
 
 </body>
 </html>
