--- a/index.html
+++ b/index.html
@@ -118,24 +118,21 @@
   </header>
 
   <script>
-    // Liste statique de versets
-    const verses = [
-      { ref: "Psaumes 23:1", text: "L'Éternel est mon berger: je ne manquerai de rien." },
-      { ref: "Jean 3:16", text: "Car Dieu a tant aimé le monde qu'il a donné son Fils unique, afin que quiconque croit en lui ne périsse point, mais qu'il ait la vie éternelle." },
-      { ref: "Philippiens 4:13", text: "Je puis tout par celui qui me fortifie." },
-      { ref: "Ésaïe 41:10", text: "Ne crains rien, car je suis avec toi; ne promène pas des regards inquiets, car je suis ton Dieu." },
-      { ref: "Matthieu 11:28", text: "Venez à moi, vous tous qui êtes fatigués et chargés, et je vous donnerai du repos." },
-      { ref: "Romains 8:28", text: "Nous savons, du reste, que toutes choses concourent au bien de ceux qui aiment Dieu." },
-      { ref: "Proverbes 3:5", text: "Confie-toi en l'Éternel de tout ton cœur, et ne t'appuie pas sur ta sagesse." },
-      { ref: "Josué 1:9", text: "Fortifie-toi et prends courage! Ne t'effraie point et ne t'épouvante point." }
-    ];
-
-    // Choix du verset en fonction du jour du mois
-    const dayIndex = new Date().getDate() % verses.length;
-    const verse = verses[dayIndex];
-
-    document.getElementById("daily-verse").textContent = `"${verse.text}" — ${verse.ref}`;
-  </script>
+  // Charger le verset du jour depuis verses.json
+  fetch('verses.json')
+    .then(response => response.json())
+    .then(verses => {
+      const today = new Date();
+      const dayOfYear = Math.floor(
+        (today - new Date(today.getFullYear(), 0, 0)) / 1000 / 60 / 60 / 24
+      );
+      const verse = verses[dayOfYear % verses.length];
+      document.getElementById('verse').textContent = `${verse.reference} - ${verse.text}`;
+    })
+    .catch(error => {
+      console.error('Erreur lors du chargement du verset :', error);
+    });
+</script>
 
 </body>
 </html>
